Fix table having unnecessary horizontal scrolling

--- a/packages/common-ui/styles/common.less
+++ b/packages/common-ui/styles/common.less
@@ -731,6 +731,7 @@ textarea {
 table.gear-plan-table {
   border-collapse: separate;
   border-spacing: 0;
+  overflow: clip;
   //overflow-x: scroll;
   // Dumb. Gross. Why can't position: sticky have any reasonable way of working with variable-width columns?
   //background-color: var(--table-bg-color);
